HTML :
Homogénisation des ennemis avec les tours et les niveaux sur le rendu
Ajout du chemin par défaut d'export de niveaux

Java :
Correction du service d'import et d'export de niveaux (dimansions, chemins, tours et waves)